# ModernCppChess

./: CMakeLists.txt  Makefile  MoveList.hpp  SEE.cpp  SEE.hpp  ai.hpp  board.hpp  check.hpp  constants.hpp  conv.py  data.py  eval.hpp  hash.cpp  hash.hpp  main.cpp  minimax_info.hpp  move.hpp  movegen.hpp  network_weights4.hpp  nnue.cpp  nnue.h  nnue.py  parameter.cpp  parameter.hpp  pawns.hpp  pch.h  sliding.cpp  sliding.hpp  tournament.bash  tune.py  uci.cpp  uci.hpp  weigths.py
